$Id: ChangeLog,v 1.114 2005/02/05 09:50:53 h_oudejans Exp $

2005-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed the 'type' command.

2005-02-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When selecting Disk IPS while openMSX is running, it's now applied
	* Last used IPS path is now remembered
	* Max Speed doesn't set speed to 500 anymore. This gave too much 
	  problems

2005-02-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed updating the popup menu's for mapper and ips
	* Restricted the history to 25 items (hardcoded for now)

2005-01-31 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fix IPS and mapper support
	* Added multiple IPS and disk IPS.	

2005-01-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed problems with non-lowercase settings in the audiopage
	* Made some more adjustments for wxmsw 2.5 with unicode

2005-01-09 Manuel Bilderbeek <manuel@msxnet.org>
	* Fixed fps counter on wx unicode.

2005-01-08 Manuel Bilderbeek <manuel@msxnet.org>
	* Added tool tips for new menus. Fixed some typos.

2005-01-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now works with wxWidgets 2.5.3, however the main screen
	  appears to be too wide.
	* Catapult is now 100% unicode compatible.
	* Added possibility to drop files on diskA,diskB, etc, but that doesn't
	  work in wxmsw because of (yet another) bug in wxWidgets.
	* Added compile targets in vc++ to compile in 2.5.3 with or without
	  unicode. wx2.4 targets are also still available.

2004-12-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed some non-game romtypes
	* Made the romtype dialog autosizing by contents
	* Added Cassette stuff by popup menu
	* Fixed some minor bugs and warnings

2004-12-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added popup menu's to the sessionpage.
	* Added romtype selection (romtypes are hardcoded for now)
	* Added IPS selection
	* Added Browse for directory (dirasdisk)
	* Added Empty disk

2004-12-13 Manuel Bilderbeek <manuel@msxnet.org>