@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.114 2005/02/05 09:50:53 h_oudejans Exp $
+$Id: ChangeLog,v 1.115 2005/02/08 19:50:18 h_oudejans Exp $
+
+2005-02-09 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fixed a crash in the 'type' command.
+	* Remove rich edit flag of the input page
 
 2005-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed the 'type' command.
